Convertisseur en langage C
Pour l'exam langage C, voici les dux versions des convertisseurs que j'ai réalisé. Il s'agit d'un convertisseur de nombre décimal vers binaire ou hexadécimal mais aussi de monnaie (dollars ver franc et franc vers dollars)

Il y a également un mot de passe: 1234

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ Calculatrice_switch.exe
 Calculatrice_fonctions.exe
 Calculatrice.exe
 Windows/Calculatrice_switch
+Linux/Calculatrice
+Linux/Convertisseur
+Linux/Convertisseur(upgrade)
